# oraclex

./: index.html
backend/: .gitignore  Dockerfile  README.md  pyproject.toml  railway.toml  requirements.txt  setup_tests.ps1
backend/app/: main.py
backend/app/api/routes/: favorites.py  games.py  health.py  odds.py  predictions.py  sentiment.py
backend/app/core/: cache.py  config.py  database.py  logging.py
backend/app/models/: schemas.py
backend/app/pipeline/: games_repo.py  prediction_graph.py  reasoning_chain.py  requirements.txt  vector_store.py
backend/app/repositories/: odds_repo.py  predictions_repo.py
backend/app/scrapers/: espn_scraper.py
backend/app/services/: odds_service.py  prediction_service.py  scheduler.py  sentiment_service.py
backend/chroma_db/: chroma.sqlite3
backend/scripts/: supabase_migration.sql
backend/tests/: oraclex.spec.js  test_oraclex_full.py  test_prediction_accuracy.py  test_prediction_service.py
frontend/: oraclex-frontend.html
