[tool.poetry]
name = "oraclex-backend"
version = "0.1.0"
description = "OracleX — AI Gambling Prediction Platform Backend"
authors = ["Precision Spares Mfg Co <dev@psmco.in>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = { extras = ["standard"], version = "^0.30.0" }
groq = "^0.11.0"
supabase = "^2.7.0"
httpx = "^0.27.0"
python-dotenv = "^1.0.0"
apscheduler = "^3.10.4"
beautifulsoup4 = "^4.12.3"
pydantic = "^2.8.0"
pydantic-settings = "^2.4.0"
python-jose = { extras = ["cryptography"], version = "^3.3.0" }
passlib = { extras = ["bcrypt"], version = "^1.7.4" }
aiohttp = "^3.10.0"
lxml = "^5.3.0"
asyncpraw = "^7.7.1"
redis = "^5.0.8"
tenacity = "^9.0.0"
structlog = "^24.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.23.0"
httpx = "^0.27.0"
ruff = "^0.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
